# docs/swagger.yaml
@@ -1,19 +1,14 @@
+basePath: /
 definitions:
   dto.ConnectRequest:
     properties:
-      player_id:
-        type: string
       player_name:
         type: string
-      session_id:
+      session_uuid:
         type: string
     type: object
   dto.CreateRequest:
     properties:
-      player_id:
-        type: string
-      player_name:
-        type: string
       rules:
         $ref: '#/definitions/dto.Rules'
       seed:
@@ -21,9 +16,9 @@ definitions:
     type: object
   dto.DisconnectRequest:
     properties:
-      player_id:
+      player_uuid:
         type: string
-      session_id:
+      session_uuid:
         type: string
     type: object
   dto.ErrorResponse:
@@ -35,9 +30,18 @@ definitions:
     properties:
       mark_pos:
         $ref: '#/definitions/geometry.Point'
-      player_id:
+      player_uuid:
         type: string
-      session_id:
+      session_uuid:
+        type: string
+    type: object
+  dto.Player:
+    properties:
+      mark:
+        type: string
+      name:
+        type: string
+      uuid:
         type: string
     type: object
   dto.Rules:
@@ -57,9 +61,9 @@ definitions:
         type: array
       players:
         items:
-          type: string
+          $ref: '#/definitions/dto.Player'
         type: array
-      session_id:
+      session_uuid:
         type: string
       state:
         type: string
@@ -68,9 +72,9 @@ definitions:
     type: object
   dto.StartRequest:
     properties:
-      player_id:
+      player_uuid:
         type: string
-      session_id:
+      session_uuid:
         type: string
     type: object
   geometry.Point:
@@ -80,8 +84,12 @@ definitions:
       "y":
         type: integer
     type: object
+host: localhost:12121
 info:
   contact: {}
+  description: Tic-Tac-Toe Game API
+  title: Tic-Tac-Toe API
+  version: "1.0"
 paths:
   /game/{session_id}/connect:
     post:
